--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 body{ 
     color:#171a20;
-    font-family: 'Helvetica', sans-serif;
+    font-family: 'M PLUS Rounded 1c', sans-serif;
 }
 html{
     scroll-behavior: smooth;
@@ -37,7 +37,7 @@ a.logo{
 }
 
 header a{
-    color:inherit;
+    color:inherit;  
 }    
 header nav a{
     text-decoration: none;
